// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectsList /> renders properly 1`] = `
<div>
  <section
    class="jsx-2739049756 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-2739049756 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Projetos
      </h1>
      <ul
        class="jsx-2739049756"
        data-testid="projectsList_noCarousel"
      >
        <li
          class="jsx-2553597104"
        >
          <img
            alt="a poke bowl"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="400"
            src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
            srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
            width="400"
          />
          <div
            class="jsx-2553597104 backface"
          >
            <a
              class="jsx-2553597104 brand link fontXS"
              href="https://www.instagram.com/tudonatjela/"
              rel="noreferrer"
              target="_blank"
            >
              @tudonatjela
            </a>
            <p
              class="jsx-2553597104 description fontS"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-2553597104 date fontXS"
            >
              2020
               - Presente
            </p>
            <small
              class="jsx-2553597104 fontXS"
            >
              * 
              em dupla com Sofia Ferreirinho
            </small>
          </div>
        </li>
        <li
          class="jsx-2553597104"
        >
          <img
            alt="coffee being poured into a mug"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="400"
            src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
            srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
            width="400"
          />
          <div
            class="jsx-2553597104 backface"
          >
            <a
              class="jsx-2553597104 brand link fontXS"
              href="https://www.instagram.com/kaffeehaus_lisboa/"
              rel="noreferrer"
              target="_blank"
            >
              @kaffeehaus_lisboa
            </a>
            <p
              class="jsx-2553597104 description fontS"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-2553597104 date fontXS"
            >
              2018
               - Presente
            </p>
          </div>
        </li>
        <li
          class="jsx-2553597104"
        >
          <img
            alt="a burrito split in half"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="400"
            src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75"
            srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
            width="400"
          />
          <div
            class="jsx-2553597104 backface"
          >
            <a
              class="jsx-2553597104 brand link fontXS"
              href="https://www.instagram.com/guacamolegmg/"
              rel="noreferrer"
              target="_blank"
            >
              @guacamolegmg
            </a>
            <p
              class="jsx-2553597104 description fontS"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-2553597104 date fontXS"
            >
              2019
               - Presente
            </p>
            <small
              class="jsx-2553597104 fontXS"
            >
              * 
              em dupla com Sofia Ferreirinho
            </small>
          </div>
        </li>
      </ul>
      <div
        class="jsx-477676945 buttonWrapper"
      >
        <div
          class="jsx-477676945 buttonBackground alignCenter"
        >
          <a
            class="buttonComponent fontS"
            href="/pt/projects"
          >
            Ver mais
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ProjectsList /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-2739049756 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-2739049756 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Projects
      </h1>
      <ul
        class="jsx-2739049756"
        data-testid="projectsList_noCarousel"
      >
        <li
          class="jsx-2553597104"
        >
          <img
            alt="a poke bowl"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="400"
            src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
            srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
            width="400"
          />
          <div
            class="jsx-2553597104 backface"
          >
            <a
              class="jsx-2553597104 brand link fontXS"
              href="https://www.instagram.com/tudonatjela/"
              rel="noreferrer"
              target="_blank"
            >
              @tudonatjela
            </a>
            <p
              class="jsx-2553597104 description fontS"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-2553597104 date fontXS"
            >
              2020
               - Present
            </p>
            <small
              class="jsx-2553597104 fontXS"
            >
              * 
              in partnership with Sofia Ferreirinho
            </small>
          </div>
        </li>
        <li
          class="jsx-2553597104"
        >
          <img
            alt="coffee being poured into a mug"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="400"
            src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
            srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
            width="400"
          />
          <div
            class="jsx-2553597104 backface"
          >
            <a
              class="jsx-2553597104 brand link fontXS"
              href="https://www.instagram.com/kaffeehaus_lisboa/"
              rel="noreferrer"
              target="_blank"
            >
              @kaffeehaus_lisboa
            </a>
            <p
              class="jsx-2553597104 description fontS"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-2553597104 date fontXS"
            >
              2018
               - Present
            </p>
          </div>
        </li>
        <li
          class="jsx-2553597104"
        >
          <img
            alt="a burrito split in half"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="400"
            src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75"
            srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 2x"
            style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
            width="400"
          />
          <div
            class="jsx-2553597104 backface"
          >
            <a
              class="jsx-2553597104 brand link fontXS"
              href="https://www.instagram.com/guacamolegmg/"
              rel="noreferrer"
              target="_blank"
            >
              @guacamolegmg
            </a>
            <p
              class="jsx-2553597104 description fontS"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-2553597104 date fontXS"
            >
              2019
               - Present
            </p>
            <small
              class="jsx-2553597104 fontXS"
            >
              * 
              in partnership with Sofia Ferreirinho
            </small>
          </div>
        </li>
      </ul>
      <div
        class="jsx-477676945 buttonWrapper"
      >
        <div
          class="jsx-477676945 buttonBackground alignCenter"
        >
          <a
            class="buttonComponent fontS"
            href="/pt/projects"
          >
            See more
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ProjectsList /> renders properly on mobile 1`] = `
<div>
  <section
    class="jsx-2739049756 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-2739049756 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Projetos
      </h1>
      <div
        class="jsx-443661925 nukaCarouselContainer"
      >
        <div
          class="slider-container"
          style="position: relative;"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
            tabindex="-1"
          >
            Slide 1 of 3
          </div>
          <div
            style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerleft"
              style="pointer-events: auto;"
            >
              <button
                aria-label="previous slide"
                class="jsx-443661925 previousButton"
                data-testid="nukaCarousel_previousSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerright"
              style="pointer-events: auto;"
            >
              <button
                aria-label="next slide"
                class="jsx-443661925 nextButton"
                data-testid="nukaCarousel_nextSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            aria-label="carousel-slider"
            class="slider-frame"
            role="region"
            style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
            tabindex="0"
          >
            <div
              class="slider-list"
              style="width: 900%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
            >
              <div
                class="slide slide-current prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a poke bowl"
                  data-times-touched="0"
                >
                  <img
                    alt="a poke bowl"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_coffee being poured into a mug"
                  data-times-touched="0"
                >
                  <img
                    alt="coffee being poured into a mug"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a burrito split in half"
                  data-times-touched="0"
                >
                  <img
                    alt="a burrito split in half"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    height="400"
                    loading="lazy"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a poke bowl"
                  data-times-touched="0"
                >
                  <img
                    alt="a poke bowl"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_coffee being poured into a mug"
                  data-times-touched="0"
                >
                  <img
                    alt="coffee being poured into a mug"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a burrito split in half"
                  data-times-touched="0"
                >
                  <img
                    alt="a burrito split in half"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    height="400"
                    loading="lazy"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a poke bowl"
                  data-times-touched="0"
                >
                  <img
                    alt="a poke bowl"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_coffee being poured into a mug"
                  data-times-touched="0"
                >
                  <img
                    alt="coffee being poured into a mug"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a burrito split in half"
                  data-times-touched="0"
                >
                  <img
                    alt="a burrito split in half"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    height="400"
                    loading="lazy"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-477676945 buttonWrapper"
      >
        <div
          class="jsx-477676945 buttonBackground alignCenter"
        >
          <a
            class="buttonComponent fontS"
            href="/pt/projects"
          >
            Ver mais
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ProjectsList /> renders properly on tablet 1`] = `
<div>
  <section
    class="jsx-2739049756 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-2739049756 wrapper genericMargins"
    >
      <h1
        class="jsx-1254015016 fontL colored"
      >
        Projetos
      </h1>
      <div
        class="jsx-3311130813 nukaCarouselContainer"
      >
        <div
          class="slider-container"
          style="position: relative;"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
            tabindex="-1"
          >
            Slide 1 of 3
          </div>
          <div
            style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerleft"
              style="pointer-events: auto;"
            >
              <button
                aria-label="previous slide"
                class="jsx-3311130813 previousButton"
                data-testid="nukaCarousel_previousSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerright"
              style="pointer-events: auto;"
            >
              <button
                aria-label="next slide"
                class="jsx-3311130813 nextButton"
                data-testid="nukaCarousel_nextSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            aria-label="carousel-slider"
            class="slider-frame"
            role="region"
            style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
            tabindex="0"
          >
            <div
              class="slider-list"
              style="width: 900%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
            >
              <div
                class="slide slide-current prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a poke bowl"
                  data-times-touched="0"
                >
                  <img
                    alt="a poke bowl"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_coffee being poured into a mug"
                  data-times-touched="0"
                >
                  <img
                    alt="coffee being poured into a mug"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a burrito split in half"
                  data-times-touched="0"
                >
                  <img
                    alt="a burrito split in half"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    height="400"
                    loading="lazy"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a poke bowl"
                  data-times-touched="0"
                >
                  <img
                    alt="a poke bowl"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_coffee being poured into a mug"
                  data-times-touched="0"
                >
                  <img
                    alt="coffee being poured into a mug"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a burrito split in half"
                  data-times-touched="0"
                >
                  <img
                    alt="a burrito split in half"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    height="400"
                    loading="lazy"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a poke bowl"
                  data-times-touched="0"
                >
                  <img
                    alt="a poke bowl"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Ftjela.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_coffee being poured into a mug"
                  data-times-touched="0"
                >
                  <img
                    alt="coffee being poured into a mug"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    fetchpriority="high"
                    height="400"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-2553597104 carouselItem"
                  data-testid="projectItem_touch_div_a burrito split in half"
                  data-times-touched="0"
                >
                  <img
                    alt="a burrito split in half"
                    data-nimg="1"
                    decoding="async"
                    draggable="false"
                    height="400"
                    loading="lazy"
                    sizes="(max-width: 1023px) 50vw, (max-width: 767px) 75vw, 30vw"
                    src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75"
                    srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=256&q=75 256w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=384&q=75 384w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=3840&q=75 3840w"
                    style="color: transparent; width: 100%; height: auto; position: relative; max-width: 400px;"
                    width="400"
                  />
                  <div
                    class="jsx-2553597104 backface"
                  >
                    <a
                      class="jsx-2553597104 brand link fontXS"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-2553597104 description fontS"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-2553597104 date fontXS"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-2553597104 fontXS"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-477676945 buttonWrapper"
      >
        <div
          class="jsx-477676945 buttonBackground alignCenter"
        >
          <a
            class="buttonComponent fontS"
            href="/pt/projects"
          >
            Ver mais
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
